--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -93,7 +93,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: https://s1.328888.xyz/2022/08/05/jA9Nr.webp
+index_img: 
 
 # If the banner of page not setting, it will show the top_img
 default_top_img: 
@@ -121,12 +121,12 @@ cover:
   # display the cover or not (是否顯示文章封面)
   index_enable: false
   aside_enable: false
-  archives_enable: false
+  archives_enable: true
   # the position of cover in home page (封面顯示的位置)
   # left/right/both
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
-  default_cover:
+  default_cover: https://s1.328888.xyz/2022/08/05/jRvAp.jpg
     # - https://s1.328888.xyz/2022/08/05/jZlHS.jpg
     # - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
 
@@ -190,7 +190,7 @@ toc:
 post_copyright:
   enable: true
   decode: false
-  author_href:
+  author_href: https://www.aobayu.cn/
   license: CC BY-NC-SA 4.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
 
@@ -703,7 +703,7 @@ newest_comments:
 translate:
   enable: true
   # The text of a button
-  default: 繁
+  default: 简
   # the language of website (1 - Traditional Chinese/ 2 - Simplified Chinese）
   defaultEncoding: 1
   # Time delay
@@ -711,7 +711,7 @@ translate:
   # The text of the button when the language is Simplified Chinese
   msgToTraditionalChinese: '繁'
   # The text of the button when the language is Traditional Chinese
-  msgToSimplifiedChinese: '簡'
+  msgToSimplifiedChinese: '简'
 
 # Read Mode (閲讀模式)
 readmode: true
