--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -414,7 +414,7 @@ footer:
   owner:
     enable: true
     since: 2020
-  custom_text: 框架 <a href="https://hexo.io/zh-cn/index.html">Hexo</a>|主题 <a href="https://butterfly.js.org/">Butterfly</a><br><a href="https://beian.miit.gov.cn/">豫ICP备2022025439号-1</a><br><a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral">本网站由<img src="https://s1.328888.xyz/2022/08/05/uueUE.png" alt="又拍云" style="height:30px;position:relative;top:9px;">提供CDN加速/云存储服务</a>
+  custom_text: 框架 <a href="https://hexo.io/zh-cn/index.html">Hexo</a>|主题 <a href="https://butterfly.js.org/">Butterfly</a><br><a href="https://beian.miit.gov.cn/">豫ICP备2022025439号-1</a><br><a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral">本网站由<img src="http://aobayu.cn/images/logo5.png" alt="又拍云" style="height:30px;position:relative;top:9px;">提供CDN加速/云存储服务</a>
   copyright: false # Copyright of theme and framework
 
 # Analysis
