--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -702,11 +702,11 @@ newest_comments:
 translate:
   enable: true
   # The text of a button
-  default: 简
+  default: 繁
   # the language of website (1 - Traditional Chinese/ 2 - Simplified Chinese）
-  defaultEncoding: 1
+  defaultEncoding: 2
   # Time delay
-  translateDelay: 0
+  translateDelay: 200
   # The text of the button when the language is Simplified Chinese
   msgToTraditionalChinese: '繁'
   # The text of the button when the language is Traditional Chinese
